fix: cards overlaps with header. feat: footer

--- a/assets/style.css
+++ b/assets/style.css
@@ -15,6 +15,7 @@ header{
     position: fixed;
     width: 100%;
     top:0;
+    z-index: 999;
 }
 
 .container{
@@ -49,7 +50,7 @@ header nav a{
     font-size: 0.9rem;
 }
 main{
-    padding-top: 6em;
+    padding:6em 0 3em 0;
 
 }
 main div.container{
@@ -128,4 +129,36 @@ main div.card figure span.heart{
 main div.card figure span.heart:hover{
     color: red;
     cursor: pointer;
+}
+
+footer{
+    background-color: #1A1A1A;
+    padding-block: 2em;
+    z-index: 998;
+
+}
+footer div.container{
+    display: flex;
+    justify-content: space-between;
+}
+
+footer div.container div.legal-info-link{
+    display: flex;
+    gap: 1em;
+}
+
+footer div.container div.social-section div.socials{
+    font-size: 1.3em;
+    display: flex;
+    justify-content: center;
+    gap:0.5em;
+}
+
+footer a{
+    text-decoration: none;
+    color: white;
+}
+footer h4{
+    color: white;
+    line-height: 2rem;
 }
